fix: review section horizontal scroll

--- a/blocks/particles/particles-js2/particles-js2.css
+++ b/blocks/particles/particles-js2/particles-js2.css
@@ -1,7 +1,13 @@
 #particles-js2 {
   position: absolute;
-  width: 100%;
+  width: 80%;
   height: 100%;
   z-index: -1;
   opacity: 0.2;
+}
+
+@media screen and (max-width: 768px) {
+  #particles-js2 {
+    display: none;
+  }
 }
