--- a/blocks/reviews/reviews.css
+++ b/blocks/reviews/reviews.css
@@ -1,10 +1,8 @@
 .reviews {
-  margin: 0 auto;
   max-width: 1824px;
   padding-bottom: 150px;
   display: flex;
   justify-content: center;
-  display: none;
 }
 
 @media screen and (max-width: 450px) {
